--- a/pv-pvc.yaml
+++ b/pv-pvc.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: hls-pv
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: /mnt/data
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: hls-pvc
@@ -8,3 +20,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
+  volumeName: hls-pv
